[package]
name = "autocxxtest"
version = "0.1.0"
authors = ["yippeesoft <yippeesoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.42"
# autocxx = { path = "../..", version="0.5.4" }
autocxx = "0.5.4"
libc = "0.2"
[build-dependencies]
bindgen = "0.58.1"
# autocxx-build = { path = "../../gen/build", version="0.5.4" }
autocxx-build = "0.5.4"
