[package]
name = "greeting"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json               = "0.4"
pretty_env_logger = "0.3"
libc = "*"
#time             = "1.0"

#opencv = "0.52"
opencv = {version = "0.52", default-features = false, features = ["opencv-32", "buildtime-bindgen"]}

[build-dependencies]
# bindgen = "0.58.1" 和 opencv 冲突 会  thread 'main' panicked at 'a `libclang` shared library is not loaded on this thread'


#:~/.cargo$ nano config
# [source.crates-io]
# replace-with = 'tuna'

# [source.tuna]
# registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

#实在不行手工下载 cargo install
